Add the Forth Phase

--- a/simulation/templates/template_structure_civic_civil_centre.xml
+++ b/simulation/templates/template_structure_civic_civil_centre.xml
@@ -104,6 +104,7 @@
     <Technologies datatype="tokens">
       phase_town_{civ}
       phase_city_{civ}
+      phase_kingdom_{civ}
       cost_mercenary
       unlock_spies
       spy_counter
