--- a/simulation/templates/template_structure_civic_civil_centre_military_colony.xml
+++ b/simulation/templates/template_structure_civic_civil_centre_military_colony.xml
@@ -58,6 +58,7 @@
     <Technologies datatype="tokens">
       -phase_town_{civ}
       -phase_city_{civ}
+      -phase_kingdom_{civ}
       health_siege_rations_1
       health_siege_rations_2
       buildtime_structures_peasants
