--- a/simulation/templates/template_structure_wonder.xml
+++ b/simulation/templates/template_structure_wonder.xml
@@ -51,7 +51,7 @@
     <Tooltip>Bring glory to your civilization and add large tracts of land to your empire.</Tooltip>
     <VisibleClasses datatype="tokens">City Wonder</VisibleClasses>
     <Icon>structures/wonder.png</Icon>
-    <RequiredTechnology>phase_city</RequiredTechnology>
+    <RequiredTechnology>phase_kingdom</RequiredTechnology>
   </Identity>
   <Loot>
     <xp>500</xp>
