civil/defense_tower/fortress/trireme/siege_tower

--- a/simulation/templates/template_structure_civic_civil_centre.xml
+++ b/simulation/templates/template_structure_civic_civil_centre.xml
@@ -100,6 +100,7 @@
     <BatchTimeModifier>0.8</BatchTimeModifier>
     <Entities datatype="tokens">
       units/{civ}_support_female_citizen
+      units/{civ}_support_slave
     </Entities>
     <Technologies datatype="tokens">
       phase_town_{civ}
