change strucs cost

--- a/simulation/templates/template_structure_civic_temple.xml
+++ b/simulation/templates/template_structure_civic_temple.xml
@@ -58,7 +58,7 @@
       heal_rate_2
       heal_temple
       health_regen_units
-      sacrifice_ritual
+      -sacrifice_ritual
     </Technologies>
   </ProductionQueue>
   <Sound>
