--- a/simulation/templates/template_structure_civic_temple.xml
+++ b/simulation/templates/template_structure_civic_temple.xml
@@ -57,7 +57,7 @@
       heal_rate
       heal_rate_2
       heal_temple
-      health_regen_units
+      -health_regen_units
       -sacrifice_ritual
     </Technologies>
   </ProductionQueue>
