--- a/simulation/templates/template_structure_defense_tower_sentry.xml
+++ b/simulation/templates/template_structure_defense_tower_sentry.xml
@@ -42,6 +42,7 @@
   <ProductionQueue>
     <Technologies datatype="tokens">
       tower_watch
+      to_defense_tower
     </Technologies>
   </ProductionQueue>
   <TerritoryInfluence>
@@ -49,6 +50,7 @@
     <Radius>16</Radius>
     <Weight>30000</Weight>
   </TerritoryInfluence>
+  <!-------
   <Upgrade>
     <Tower>
       <Entity>structures/{civ}_defense_tower</Entity>
@@ -61,6 +63,7 @@
       <Time>100</Time>
     </Tower>
   </Upgrade>
+  ----->
   <VisualActor>
     <Actor>props/special/palisade_rocks_fort.xml</Actor>
   </VisualActor>
