--- a/simulation/templates/template_structure_civic_house.xml
+++ b/simulation/templates/template_structure_civic_house.xml
@@ -54,6 +54,8 @@
     <Technologies datatype="tokens">
       health_females_01
       pop_house_01
+      pop_house_02
+      pop_house_03
       unlock_females_house
     </Technologies>
   </ProductionQueue>
