--- a/simulation/templates/template_structure_defense_tower_outpost.xml
+++ b/simulation/templates/template_structure_defense_tower_outpost.xml
@@ -51,7 +51,8 @@
   <Identity>
     <GenericName>Outpost</GenericName>
     <Tooltip>Build in neutral and own territories to scout areas of the map. Slowly converts to Gaia while in neutral territory.</Tooltip>
-    <VisibleClasses datatype="tokens">Village Outpost</VisibleClasses>
+    <VisibleClasses datatype="tokens">Outpost -VillageOutpost</VisibleClasses>
+    <RequiredTechnology>phase_city</RequiredTechnology>
     <Icon>structures/outpost.png</Icon>
   </Identity>
   <Loot>
