--- a/simulation/templates/template_structure_defense_tower_outpost.xml
+++ b/simulation/templates/template_structure_defense_tower_outpost.xml
@@ -52,7 +52,7 @@
     <GenericName>Outpost</GenericName>
     <Tooltip>Build in neutral and own territories to scout areas of the map. Slowly converts to Gaia while in neutral territory.</Tooltip>
     <VisibleClasses datatype="tokens">Outpost -VillageOutpost</VisibleClasses>
-    <RequiredTechnology>phase_city</RequiredTechnology>
+    <RequiredTechnology></RequiredTechnology>
     <Icon>structures/outpost.png</Icon>
   </Identity>
   <Loot>
