--- a/simulation/templates/template_unit_infantry_ranged_archer.xml
+++ b/simulation/templates/template_unit_infantry_ranged_archer.xml
@@ -29,6 +29,6 @@
   <Identity>
     <VisibleClasses datatype="tokens">Archer</VisibleClasses>
     <GenericName>Archer</GenericName>
-    <RequiredTechnology>phase_town</RequiredTechnology>
+    <RequiredTechnology></RequiredTechnology>
   </Identity>
   </Entity>
