delete female citizen

--- a/simulation/templates/template_structure_civic_civil_centre.xml
+++ b/simulation/templates/template_structure_civic_civil_centre.xml
@@ -99,7 +99,7 @@
   <ProductionQueue>
     <BatchTimeModifier>0.8</BatchTimeModifier>
     <Entities datatype="tokens">
-      units/{civ}_support_female_citizen
+      -units/{civ}_support_female_citizen
       units/{civ}_support_slave
     </Entities>
     <Technologies datatype="tokens">
