--- a/simulation/templates/template_unit_infantry_ranged_javelinist.xml
+++ b/simulation/templates/template_unit_infantry_ranged_javelinist.xml
@@ -23,6 +23,36 @@
       </Bonuses>
     </Ranged>
   </Attack>
+  
+  <Builder>
+    <Rate>1.0</Rate>
+    <Entities datatype="tokens">
+      structures/{civ}_house
+      structures/{civ}_storehouse
+      structures/{civ}_farmstead
+      structures/{civ}_field
+      structures/{civ}_corral
+      structures/{civ}_outpost
+      other/wallset_palisade
+      other/palisades_tall_spikes_3x1
+      structures/{civ}_sentry_tower
+      structures/{civ}_defense_tower
+      structures/{civ}_dock
+      structures/{civ}_barracks
+      -structures/{civ}_range
+      structures/{civ}_stable
+      structures/{civ}_workshop
+      structures/{civ}_elephant_stables
+      structures/{civ}_blacksmith
+      structures/{civ}_temple
+      structures/{civ}_market
+      structures/{civ}_wallset_stone
+      structures/{civ}_civil_centre
+      structures/{civ}_fortress
+      structures/{civ}_wonder
+    </Entities>
+  </Builder>
+  
   <Cost>
     <Resources>
       <wood>20</wood>
@@ -37,4 +67,42 @@
     <GenericName>Skirmisher</GenericName>
     <RequiredTechnology></RequiredTechnology>
   </Identity>
+  
+  <ResourceGatherer>
+    <MaxDistance>2.0</MaxDistance>
+    <BaseSpeed>1.0</BaseSpeed>
+    <Rates>
+      <food.fruit>0.3</food.fruit>
+      <food.grain>0.25</food.grain>
+      <food.meat>1</food.meat>
+      <wood.tree>0.6</wood.tree>
+      <wood.ruins>5</wood.ruins>
+      <stone.rock>0.6</stone.rock>
+      <stone.ruins>3</stone.ruins>
+      <metal.ore>0.6</metal.ore>
+    </Rates>
+  </ResourceGatherer>
+  
+  <Sound>
+    <SoundGroups>
+      <trained>interface/alarm/alarm_create_female.xml</trained>
+      <select>voice/{lang}/civ/civ_{gender}_select.xml</select>
+      <order_walk>voice/{lang}/civ/civ_{gender}_walk.xml</order_walk>
+      <order_attack>voice/{lang}/civ/civ_{gender}_attack.xml</order_attack>
+      <order_build>voice/{lang}/civ/civ_{gender}_build.xml</order_build>
+      <order_gather>voice/{lang}/civ/civ_{gender}_gather.xml</order_gather>
+      <order_repair>voice/{lang}/civ/civ_{gender}_repair.xml</order_repair>
+      <order_garrison>voice/{lang}/civ/civ_{gender}_garrison.xml</order_garrison>
+      <attack_melee>attack/weapon/sword.xml</attack_melee>
+      <death>actor/human/death/{gender}_death.xml</death>
+      <build>resource/construction/con_wood.xml</build>
+      <gather_fruit>resource/foraging/forage_leaves.xml</gather_fruit>
+      <gather_grain>resource/farming/farm.xml</gather_grain>
+      <gather_tree>resource/lumbering/lumbering.xml</gather_tree>
+      <gather_rock>resource/mining/pickaxe.xml</gather_rock>
+      <gather_ore>resource/mining/mining.xml</gather_ore>
+      <gather_ruins>resource/mining/mining.xml</gather_ruins>
+    </SoundGroups>
+  </Sound>
+  
   </Entity>
