--- a/simulation/templates/template_structure_civic_civil_centre.xml
+++ b/simulation/templates/template_structure_civic_civil_centre.xml
@@ -101,6 +101,12 @@
     <Entities datatype="tokens">
       -units/{civ}_support_female_citizen
       units/{civ}_support_slave
+      units/{civ}_infantry_swordsman
+      units/{civ}_infantry_pikeman
+      units/{civ}_infantry_pikeman
+      units/{civ}_infantry_spearman
+      units/{civ}_infantry_javelinist
+      units/{civ}_infantry_slinger
     </Entities>
     <Technologies datatype="tokens">
       phase_town_{civ}
