test for civil center add units

--- a/simulation/templates/template_structure_civic_civil_centre.xml
+++ b/simulation/templates/template_structure_civic_civil_centre.xml
@@ -101,11 +101,11 @@
     <Entities datatype="tokens">
       -units/{civ}_support_female_citizen
       units/{civ}_support_slave
-      units/{civ}_infantry_swordsman
+      units/{civ}_infantry_melee_swordsman
       units/{civ}_infantry_pikeman
-      units/{civ}_infantry_pikeman
-      units/{civ}_infantry_spearman
-      units/{civ}_infantry_javelinist
+      units/{civ}_infantry_ranged_archer
+      units/{civ}_infantry_ranged_spearman
+      units/{civ}_infantry_ranged_javelinist
       units/{civ}_infantry_slinger
     </Entities>
     <Technologies datatype="tokens">
