--- a/simulation/templates/template_structure_resource_corral.xml
+++ b/simulation/templates/template_structure_resource_corral.xml
@@ -42,6 +42,7 @@
       gather_animals_stockbreeding
       gather_animals_dogs
       health_cavalry_01
+      superfine_forage
     </Technologies>
   </ProductionQueue>
   <Sound>
