blacksmith tech covers

--- a/simulation/templates/template_structure_military_blacksmith.xml
+++ b/simulation/templates/template_structure_military_blacksmith.xml
@@ -59,6 +59,9 @@
       armor_cav_01
       armor_cav_02
       iron_tip_ram
+      cover_leather
+      cover_bronze_plate
+      siege_technician
     </Technologies>
   </ProductionQueue>
   <Sound>
