workshop tech finished

--- a/simulation/templates/template_structure_military_workshop.xml
+++ b/simulation/templates/template_structure_military_workshop.xml
@@ -55,14 +55,15 @@
       units/{civ}_mechanical_siege_tower
     </Entities>
     <Technologies datatype="tokens">
-      siege_cost_metal
+      -siege_cost_metal
       siege_attack
       siege_armor_1
       siege_armor_2
-      siege_packing
-      siege_torsion_springs_1
-      siege_flaming_munitions
+      -siege_packing
+      -siege_torsion_springs_1
+      -siege_flaming_munitions
       siege_buildtime
+      
     </Technologies>
   </ProductionQueue>
   <Sound>
