--- a/simulation/templates/template_structure_military_fortress.xml
+++ b/simulation/templates/template_structure_military_fortress.xml
@@ -91,10 +91,11 @@
       units/{civ}_mechanical_siege_tower
     </Entities>
     <Technologies datatype="tokens">
-      attack_accuracy
-      attack_soldiers_will
-      attack_capture_siege_ladders
-      attack_champions_elite
+      -attack_accuracy
+      -attack_soldiers_will
+      -attack_capture_siege_ladders
+      -attack_champions_elite
+      arrow_shooters
     </Technologies>
   </ProductionQueue>
   <Sound>
