iber blacksmith techs

--- a/simulation/templates/template_structure_military_blacksmith.xml
+++ b/simulation/templates/template_structure_military_blacksmith.xml
@@ -64,6 +64,7 @@
       armor_cav_01
       armor_cav_02
       armor_cav_03
+      attack_steel_working
     </Technologies>
   </ProductionQueue>
   <Sound>
