--- a/simulation/templates/template_structure_military_workshop.xml
+++ b/simulation/templates/template_structure_military_workshop.xml
@@ -63,7 +63,7 @@
       -siege_torsion_springs_1
       -siege_flaming_munitions
       siege_buildtime
-      
+      attack_capture_siege_ladders
     </Technologies>
   </ProductionQueue>
   <Sound>
