--- a/simulation/templates/template_unit_infantry_melee_pikeman.xml
+++ b/simulation/templates/template_unit_infantry_melee_pikeman.xml
@@ -6,25 +6,25 @@
   </Armour>
   <Attack>
     <Melee>
-      <Hack>2</Hack>
-      <MaxRange>5</MaxRange>
+      <Hack>4</Hack>
+      <MaxRange>0</MaxRange>
       <PrepareTime>1000</PrepareTime>
       <RepeatTime>1250</RepeatTime>
       <Bonuses>
           <Bonus1>
             <Classes>Cavalry</Classes>
-            <Multiplier>3.0</Multiplier>
+            <Multiplier>2.0</Multiplier>
           </Bonus1>
           <Bonus2>
             <Classes>Elephant</Classes>
-            <Multiplier>3.0</Multiplier>
+            <Multiplier>2.0</Multiplier>
           </Bonus2>
       </Bonuses>
     </Melee>
   </Attack>
   <Cost>
     <Resources>
-      <wood>70</wood>
+      <food>70</food>
       <metal>10</metal>
     </Resources>
     <Health>
