--- a/simulation/templates/template_unit_champion_infantry_javelinist.xml
+++ b/simulation/templates/template_unit_champion_infantry_javelinist.xml
@@ -7,10 +7,10 @@
   <Attack>
     <Ranged>
       <Hack>0</Hack>
-      <Pierce>7.0</Pierce>
+      <Pierce>8.0</Pierce>
       <Crush>0</Crush>
-      <MaxRange>40.0</MaxRange>
-      <MinRange>0.0</MinRange>
+      <MaxRange>30.0</MaxRange>
+      <MinRange>3.0</MinRange>
       <ProjectileSpeed>62.5</ProjectileSpeed>
       <Gravity>9.81</Gravity>
       <PrepareTime>500</PrepareTime>
@@ -20,13 +20,9 @@
       <PreferredClasses datatype="tokens">Human</PreferredClasses>
       <Bonuses>
 	<Bonus1>
-      	  <Classes>Archer</Classes>
-          <Multiplier>5.0</Multiplier>
+      	  <Classes>Elephant</Classes>
+          <Multiplier>2.5</Multiplier>
 	</Bonus1>
- 	<Bonus2>
-      	  <Classes>Sling</Classes>
-          <Multiplier>5.0</Multiplier>
-	</Bonus2>
       </Bonuses>
     </Ranged>
   </Attack>
