--- a/simulation/templates/template_unit_infantry_ranged_javelinist.xml
+++ b/simulation/templates/template_unit_infantry_ranged_javelinist.xml
@@ -13,13 +13,9 @@
       <Spread>2.2</Spread>
       <Bonuses>
 	<Bonus1>
-      	  <Classes>Archer</Classes>
-          <Multiplier>5.0</Multiplier>
+      	  <Classes>Elephant</Classes>
+          <Multiplier>2.5</Multiplier>
 	</Bonus1>
- 	<Bonus2>
-      	  <Classes>Sling</Classes>
-          <Multiplier>5.0</Multiplier>
-	</Bonus2>
       </Bonuses>
     </Ranged>
   </Attack>
