--- a/simulation/templates/template_unit_cavalry_ranged_javelinist.xml
+++ b/simulation/templates/template_unit_cavalry_ranged_javelinist.xml
@@ -32,6 +32,7 @@
   <Identity>
     <VisibleClasses datatype="tokens">Javelin</VisibleClasses>
     <GenericName>Cavalry Skirmisher</GenericName>
+    <RequiredTechnology>phase_town</RequiredTechnology>
   </Identity>
   <Loot>
     <food>7</food>
