--- a/simulation/templates/template_unit_fauna_hunt_skittish_elephant_infant.xml
+++ b/simulation/templates/template_unit_fauna_hunt_skittish_elephant_infant.xml
@@ -13,6 +13,7 @@
     <Civ>gaia</Civ>
     <VisibleClasses datatype="tokens">Elephant</VisibleClasses>
     <Icon>gaia/fauna_elephant_african_infant.png</Icon>
+    <RequiredTechnology>phase_city</RequiredTechnology>
   </Identity>
   <Position>
     <Anchor>pitch</Anchor>
