--- a/simulation/templates/template_unit_cavalry_melee_spearman.xml
+++ b/simulation/templates/template_unit_cavalry_melee_spearman.xml
@@ -26,5 +26,6 @@
   <Identity>
     <VisibleClasses datatype="tokens">Spear</VisibleClasses>
     <GenericName>Cavalry Spearman</GenericName>
+    <RequiredTechnology>phase_town</RequiredTechnology>
   </Identity>
   </Entity>
