--- a/simulation/templates/template_unit_fauna_hunt_defensive_elephant.xml
+++ b/simulation/templates/template_unit_fauna_hunt_defensive_elephant.xml
@@ -7,9 +7,9 @@
   </Armour>
   <Attack>
     <Melee>
-      <Hack>25.0</Hack>
-      <Pierce>10.0</Pierce>
-      <Crush>20.0</Crush>
+      <Hack>30</Hack>
+      <Pierce>0</Pierce>
+      <Crush>0</Crush>
       <MaxRange>6.0</MaxRange>
       <PrepareTime>500</PrepareTime>
       <RepeatTime>1000</RepeatTime>
@@ -25,6 +25,7 @@
   <Identity>
     <Civ>gaia</Civ>
     <VisibleClasses datatype="tokens">Elephant</VisibleClasses>
+    <RequiredTechnology>phase_city</RequiredTechnology>
   </Identity>
   <Loot>
     <xp>50</xp>
