--- a/simulation/templates/template_unit_support_slave.xml
+++ b/simulation/templates/template_unit_support_slave.xml
@@ -24,13 +24,24 @@
       structures/{civ}_farmstead
       structures/{civ}_field
       structures/{civ}_corral
+      structures/{civ}_outpost
+      other/wallset_palisade
+      -other/palisades_tall_spikes_3x1
+      -structures/{civ}_sentry_tower
+      structures/{civ}_defense_tower
       structures/{civ}_dock
       structures/{civ}_barracks
-      structures/{civ}_range
+      -structures/{civ}_range
       structures/{civ}_stable
+      structures/{civ}_workshop
+      structures/{civ}_elephant_stables
+      structures/{civ}_blacksmith
       structures/{civ}_temple
       structures/{civ}_market
+      structures/{civ}_wallset_stone
       structures/{civ}_civil_centre
+      structures/{civ}_fortress
+      structures/{civ}_wonder
       </Entities>
   </Builder>
   <Cost>
@@ -64,10 +75,10 @@
     <BaseSpeed>1.0</BaseSpeed>
     <Rates>
       <food.fish>0</food.fish>
-      <food.fruit>0.3</food.fruit>
-      <food.grain>0.4</food.grain>
+      <food.fruit>1</food.fruit>
+      <food.grain>0.6</food.grain>
       <food.meat>1</food.meat>
-      <wood.tree>0.6</wood.tree>
+      <wood.tree>0.7</wood.tree>
       <wood.ruins>5</wood.ruins>
       <stone.rock>0.7</stone.rock>
       <stone.ruins>4</stone.ruins>
