--- a/simulation/templates/template_structure_civic_house.xml
+++ b/simulation/templates/template_structure_civic_house.xml
@@ -11,7 +11,7 @@
     <PopulationBonus>5</PopulationBonus>
     <BuildTime>30</BuildTime>
     <Resources>
-      <wood>75</wood>
+      <wood>50</wood>
     </Resources>
   </Cost>
   <Footprint>
@@ -49,14 +49,14 @@
   <ProductionQueue>
     <BatchTimeModifier>0.8</BatchTimeModifier>
     <Entities datatype="tokens">
-      units/{civ}_support_female_citizen_house
+      -units/{civ}_support_female_citizen_house
     </Entities>
     <Technologies datatype="tokens">
-      health_females_01
+      -health_females_01
       pop_house_01
       pop_house_02
-      pop_house_03
-      unlock_females_house
+      -pop_house_03
+      -unlock_females_house
     </Technologies>
   </ProductionQueue>
   <Sound>
