--- a/simulation/templates/template_unit_support_female_citizen.xml
+++ b/simulation/templates/template_unit_support_female_citizen.xml
@@ -29,12 +29,12 @@
       structures/{civ}_corral
       structures/{civ}_outpost
       other/wallset_palisade
-      other/palisades_tall_spikes_3x1
-      structures/{civ}_sentry_tower
+      -other/palisades_tall_spikes_3x1
+      -structures/{civ}_sentry_tower
       structures/{civ}_defense_tower
       structures/{civ}_dock
       structures/{civ}_barracks
-      structures/{civ}_range
+      -structures/{civ}_range
       structures/{civ}_stable
       structures/{civ}_workshop
       structures/{civ}_elephant_stables
@@ -76,11 +76,11 @@
       <food.fruit>1</food.fruit>
       <food.grain>0.5</food.grain>
       <food.meat>1</food.meat>
-      <wood.tree>0.7</wood.tree>
+      <wood.tree>0.5</wood.tree>
       <wood.ruins>5</wood.ruins>
-      <stone.rock>0.35</stone.rock>
+      <stone.rock>0.5</stone.rock>
       <stone.ruins>2</stone.ruins>
-      <metal.ore>0.35</metal.ore>
+      <metal.ore>0.5</metal.ore>
     </Rates>
   </ResourceGatherer>
   <Sound>
