--- a/simulation/templates/template_unit_infantry_melee_spearman.xml
+++ b/simulation/templates/template_unit_infantry_melee_spearman.xml
@@ -33,8 +33,8 @@
       structures/{civ}_corral
       structures/{civ}_outpost
       other/wallset_palisade
-      other/palisades_tall_spikes_3x1
-      structures/{civ}_sentry_tower
+      -other/palisades_tall_spikes_3x1
+      -structures/{civ}_sentry_tower
       structures/{civ}_defense_tower
       structures/{civ}_dock
       structures/{civ}_barracks
